<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="20dp"

    >




    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"

        >
        <LinearLayout
            android:id=
                "@+id/single_event_text_tittle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/single_event_text_tittle_sample"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"


                android:text="@string/event_tittle"
                android:textColor="@color/white"
                android:background="@drawable/text_sample_background"
                android:textSize="35sp"

                android:fontFamily="@font/major_family"



                >

            </TextView>
            <TextView

                android:id="@+id/single_event_text_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"



                android:text="Sample text"

                android:textColor="@color/black"
                android:fontFamily="@font/major_family"
                android:textSize="35sp"


                >

            </TextView>
        </LinearLayout>

    <LinearLayout
        android:id=
            "@+id/single_event_text_place_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/single_event_text_tittle_layout">

        <TextView
            android:id="@+id/single_event_text_place_sample"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"


            android:text="@string/event_place"
            android:textColor="@color/white"
            android:background="@drawable/text_sample_background"
            android:textSize="35sp"

            android:fontFamily="@font/major_family"



            >

        </TextView>
    <TextView

        android:id="@+id/single_event_text_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"



        android:text="Sample text"

        android:textColor="@color/black"
        android:fontFamily="@font/major_family"
        android:textSize="35sp"


        >

    </TextView>
    </LinearLayout>

    <LinearLayout
        android:id=
            "@+id/single_event_text_datetime_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf=
            "@id/single_event_text_place_layout">



        <TextView
            android:id=
                "@+id/single_event_text_datetime_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"



            android:text="@string/event_datetime"
            android:textColor="@color/white"
            android:background="@drawable/text_sample_background"
            android:textSize="35sp"


            >

        </TextView>


        <TextView

            android:id="@+id/single_event_text_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="top"


            android:text="Sample text"


            android:textColor="@color/black"
            android:fontFamily="@font/major_family"
            android:textSize="35sp"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/single_event_text_place_layout">

        </TextView>



    </LinearLayout>


    <LinearLayout
        android:id=
            "@+id/single_event_text_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf=
            "@id/single_event_text_datetime_layout">


        <TextView
            android:id=
                "@+id/single_event_text_description_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_sample_background"




            android:text="@string/event_description"
            android:textColor="@color/white"
            android:textSize="35sp"


            >

        </TextView>

    <TextView

        android:id="@+id/single_event_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|center_vertical"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:text="Sample text"

        android:textColor="@color/black"
        android:fontFamily="@font/major_family"
        android:textSize="35sp"


        android:autoLink="all"

        >

    </TextView>


    </LinearLayout>

    <LinearLayout
        android:id=
            "@+id/single_event_text_creator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf=
            "@id/single_event_text_description_layout">


    <TextView
        android:id=
            "@+id/single_event_text_creator_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/event_creator"
        android:fontFamily="@font/major_family"
        android:textColor="@color/white"
        android:background="@drawable/text_sample_background"
        android:textSize="35sp"


        >

    </TextView>

  <TextView

    android:id="@+id/single_event_text_creator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top|center_vertical"
    android:text="Sample text"
    android:layout_gravity="start"
    android:layout_marginStart="30dp"


    android:textColor="@color/black"
    android:fontFamily="@font/major_family"
    android:textSize="35sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/single_event_text_description"
        >

    </TextView>


    </LinearLayout>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>